Automate anime metadata saving (nfo and poster)

--- a/downloader/templates/downloader/search.html
+++ b/downloader/templates/downloader/search.html
@@ -53,6 +53,8 @@
                     <input type="hidden" name="id" value="{{ result.id }}">
                     <input type="hidden" name="slug" value="{{ result.slug }}">
                     <input type="hidden" name="episodes_count" value="{{ result.episodes_count }}">
+                    <input type="hidden" name="year" value="{{ result.year }}">
+                    <input type="hidden" name="studio" value="{{ result.studio }}">
                     <button type="submit"
                         class="btn btn-primary rounded-0 border-0 d-flex align-items-center justify-content-center"
                         style="width: 50px; height: 100%; transition: background-color 0.2s;" title="Add to Library">
