--- a/downloader/templates/downloader/downloaded.html
+++ b/downloader/templates/downloader/downloaded.html
@@ -5,7 +5,7 @@
     <h2 class="mb-5">Downloaded Library</h2>
 
     {% if episodes %}
-    <div class="row row-cols-1 row-cols-md-3 g-4 w-100">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 w-100">
         {% for episode in episodes %}
         <div class="col">
             <div class="card bg-secondary text-white h-100">
